[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RFL"
version = "1.7.0"
description = "Rackslab Foundation Library"
license = "LGPL-3.0-or-later"
requires-python = ">=3.6"
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]

[project.optional-dependencies]
tests = [
    "Authlib",
    "joserfc",
    "Flask",
    "PyJWT",
    "pytest",
    "python-ldap",
    "PyYAML",
    "requests",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
