[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RFL"
version = "1.8.0"
description = "Rackslab Foundation Library"
license = "LGPL-3.0-or-later"
requires-python = ">=3.6"
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]

[project.optional-dependencies]
tests = [
    "Authlib",
    "Flask",
    "PyJWT",
    "pytest",
    "python-ldap",
    "PyYAML",
    "requests",
]

[tool.pytest.ini_options]
# The src/build package directory is named "build", which pytest skips by default
# (norecursedirs). List testpaths explicitly so RFL.build tests are collected.
testpaths = [
    "src/core",
    "src/authentication",
    "src/build",
    "src/log",
    "src/permissions",
    "src/settings",
    "src/web",
]
import_mode = "importlib"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
