[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RFL.authentication"
version = "1.7.0"
description = "Rackslab Foundation Library: authentication package"
license = "LGPL-3.0-or-later"
requires-python = ">=3.6"
keywords = ["utility", "basic"]
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]
dependencies = [
    "RFL.core",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
readme = "README.md"

[project.optional-dependencies]
jwt = ["PyJWT"]
ldap = ["python-ldap"]
oidc = ["Authlib", "Flask", "requests"]
all = [
    "PyJWT",
    "python-ldap",
    "Authlib",
    "Flask",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/rackslab/RFL"
"Bug Tracker" = "https://github.com/rackslab/RFL/issues"

[tool.setuptools.packages.find]
include = ["rfl.authentication*"]
