[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RFL.log"
version = "1.1.1"
description = "Rackslab Foundation Library: log package"
license = {text = "GPLv3+"}
requires-python = ">=3.6"
keywords = ["utility", "basic"]
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/rackslab/RFL"
"Bug Tracker" = "https://github.com/rackslab/RFL/issues"

[tool.setuptools.packages.find]
include = ["rfl.log*"]
